--- a/Курсач2.0/chapter1.tex
+++ b/Курсач2.0/chapter1.tex
@@ -1,8 +1,7 @@
-\usepackage[cp1251]{inputenc}
-\chapter{ОБЗОР ЛИТЕРАТУРЫ по теме "Теория управления по прогнозирующей модели"}\label{chap1}
-В данной главе собраны теоритические сведения об управлении по прогнозирующей моделии (далее $ - $ MPC), а так же о его модификации - экономическом MPC. Рассматриваются различные подходы к построению аппроксимирующих задач.
+\chapter{ОБЗОР ЛИТЕРАТУРЫ}\label{chap1}
+В данной главе собраны теоретические сведения об управлении по прогнозирующей моделии (далее $ - $ MPC), а так же о его модификации --- экономическом MPC. Рассматриваются различные подходы к построению аппроксимирующих задач.
 \section{Теория управления по прогнозирующей модели}\label{MPC}
-Управление по прогнозируемой модели (далее MPC, от англ. Model Predictive Control) --- это продвинутый метод управления процессами, который используется для соответствующего набора ограничений. Оно используется в перерабатывающей индустрии, на химических заводах и нефтепереработке с 80-х годов ХХ-го века. Сейчас данный метод так же используется при калибровке энергетических систем и силовой электронике. В МРС в основном используются динамические модели процессов, наиболее часто - линейные эмпирические. Главным приимуществом MPC является то, что он способен оптимизировать текущий временной отрезок, учитывая будущие интервалы.
+Управление по прогнозируемой модели (далее MPC, от англ. Model Predictive Control) --- это продвинутый метод управления процессами, который используется для соответствующего набора ограничений. Оно используется в перерабатывающей индустрии, на химических заводах и нефтепереработке с 80-х годов ХХ-го века. Сейчас данный метод так же используется при калибровке энергетических систем и силовой электронике. В МРС в основном используются динамические модели процессов, наиболее часто --- линейные эмпирические. Главным приимуществом MPC является то, что он способен оптимизировать текущий временной отрезок, учитывая будущие интервалы.
 
 Модели, используемые в MPC, направлены на то, чтобы отражать поведение сложных динамических систем. Они предсказывают изменения в зависимых переменных моделируемых систем благодаря изменениям независимых переменных. Например если речь идет о химических процессах, независимые переменные, которые могут быть добавлены регулятором чаще всего являются либо установками ПИД-регуляторов, либо конечными контрольными элементами.
 
@@ -29,7 +28,7 @@
 	\begin{equation}
 	\dot{x}(t) = f(x(t),u(t),\omega(t)), t \ge 0,
 	\end{equation}
-	где $ x \in X \subseteq \mathbb{R}^n - $ вектор состояния, $ u \in U \subset \mathbb{R}^r - $ вектор управления, $ \omega \in W \subset \mathbb{R}^m - $ вектор возмущений, $ \dot{x} = dx/dt $. Через $ X $ обозначим множесто допустимых состояний, через $ U - $ множество допустимых управлений. Вектор возмущений включает в себя неучтённые воздействия на систему, ошибки моделирования и прочие неопределённости, влияющие на систему, и ограничен множеством $ W $. 
+	где $ x \in X \subseteq \mathbb{R}^n $ --- вектор состояния, $ u \in U \subset \mathbb{R}^r $ --- вектор управления, $ \omega \in W \subset \mathbb{R}^m $ --- вектор возмущений, $ \dot{x} = dx/dt $. Через $ X $ обозначим множесто допустимых состояний, через $ U - $ множество допустимых управлений. Вектор возмущений включает в себя неучтённые воздействия на систему, ошибки моделирования и прочие неопределённости, влияющие на систему, и ограничен множеством $ W $. 
 	
 	В дополнение к нелинейным системам в непрерывном времени, в MPC в данной работе мы рассмотрим и другие модели. В частности, это могут быть нелинейные системы в дискретном времени, полученные дискретизацией систем в непрерывном времени вида (1.1). Дискретный аналог системы, заданной уравнением (1.1), определяется следующим нестационарным разностным уравнением
 	\begin{equation}
@@ -51,7 +50,7 @@
 	
 	Множества $ X, U $, как правило, являются множествами простой структуры (шар, параллелепипед, иногда, выпуклый многогранник). Обычно на состояния и управления задаются дополнительные ограничения, следующие из физических ограничений для управляемого объекта, в виде смешанного ограничения
 	\begin{equation}
-	g(x(t),u(t)) \le 0  \forall t \ge 0.
+	g(x(t),u(t)) \le 0 \quad \forall t \ge 0.
 	\end{equation}
 	
 	Наконец, предпологается, что возмущения ограничны некоторым подмножеством $ W \subset \mathbb{R}^m $, в связи с тем, что для отдельных систем управления устойчивость замкнутого контура доказана для достаточно малых возмущений.
@@ -83,22 +82,18 @@
 	на промежутке $ [\tau_k, [\tau_{k+1}) $, после чего строится и решается новая прогнозирующая задача для следующего промежутка.
 	
 	При $ (x_*, u_*) = (0, 0) $ прогнозирующая задача оптимального управления может быть записана в виде:
-	\begin{center}
-	$ \int_{0}^{\tau_N}(\Vert\varphi(t|x(\tau_k),u(\cdot))\Vert^2_Q + \Vert u(t)\Vert^2_R)dt \rightarrow \underset{u}{min}, $
-	\end{center}
+	$$ \int_{0}^{\tau_N}(\Vert\varphi(t|x(\tau_k),u(\cdot))\Vert^2_Q + \Vert u(t)\Vert^2_R)dt \rightarrow \underset{u}{\min}, $$
 	\begin{equation}
 	\dot{\varphi}(t|x(\tau_k),u(\cdot)) = f(\varphi(t|x(\tau_k),u(\cdot)), u(t), 0),
     \end{equation}
-    \begin{center}
-	$ g(\varphi(t|x(\tau_k),u(\cdot)), u(t)) \le 0, $ \\
-	$ \varphi(t|x(\tau_k),u(\cdot)) \in X, u(t) \in U, \forall t \in [0, \tau_N].  $
-	\end{center}
+	$$ g(\varphi(t|x(\tau_k),u(\cdot)), u(t)) \le 0, $$
+	$$ \varphi(t|x(\tau_k),u(\cdot)) \in X, u(t) \in U, \forall t \in [0, \tau_N]. $$
 	
 	В критерии качества задачи (1.4) взвешенная норма определяется стандартно: $ \Vert x\Vert^2_Q = x^T Qx, Q > 0 $. Тогда в критерии $ Q $ и $ R $ положительно определённые матрицы, параметры настройки MPC-системы. Они отвечают за баланс между скоростью стабилизации и стоимостью переходного процесса. 
 	
 	В прогнозирующей задаче (1.4) математическая модель динамической системы совпадает с номинальной системой (1.1) и $ \varphi(t|x(\tau_k),u(\cdot)) $ предсказываемое состояние системы (1.1). Это означает, что, несмотря на наличие возмущений в динамике управляемого объекта, предсказания для него строятся по детерминированной модели. Такой подход соответствует классическим результатам МРС [10] или классическому синтезу оптимальных управлений типа обратной связи в задачах оптимального управления [14].
 	
-	Начальное состояние номинальной системы задается условием $ x(0) = x(\tau_k) $, где $ x(|tau_k) $ текущее измеренное состояние объекта управления.
+	Начальное состояние номинальной системы задается условием $ x(0) = x(\tau_k) $, где $ x(\tau_k) $ текущее измеренное состояние объекта управления.
 	
 	Горизонт управления и прогнозирования $ \tau_N > 0 $ конечен. Для эффективного численного решения прогнозирующей задачи оптимального управления (1.4) горизонт должен быть небольшим. С другой стороны, при недостаточ-
 	но больших горизонтах управления МРС-регулятор не сможет обеспечить устойчивость замкнутой системы. Оценки для длины горизонта строятся в рамках так называемого безусловного МРС в работе [8].
@@ -116,11 +111,11 @@
 	Поскольку построенное управление (1.5) зависит от состояния объекта, оно является управлением типа обратной связи, и таким образом, алгоритм МРС обеспечивает управление системой по принципу замкнутого контура.
 	
 	Суммируя, алгоритм MPC имеет следующие шаги:
-	\begin{itemize}
+	\begin{enumerate}
 		\item Положить $ k = 0 $.
 		\item Решить задачу (1.4) для $ x(\tau_k), $ найти $ u^0(\cdot|x(\tau_k)) $
 		\item Подавать на вход объекта управления постоянное управление $ u_{MPC}(\tau_k) := u^0(0|x(\tau_k))$ до наступления момента $ \tau_{k+1} $.
 		\item Положить $ k:=k+1 $, вернуться к шагу 2.
-	\end{itemize}
+	\end{enumerate}
 	Система (1.1) с управлением (1.5) замкнутая система является асимптотически устойчивой при выполнении ряда условий на функцию $ f $, матрицы
-	$ Q, R $ и горизонт управления $ \tau_N  $[8] или дополнительных терминальных условия в прогнозирующей задаче оптимального управления [4, 7].
+	$ Q, R $ и горизонт управления $ \tau_N  $ [8] или дополнительных терминальных условия в прогнозирующей задаче оптимального управления [4, 7].
