--- a/Курсач2.0/chapter3.tex
+++ b/Курсач2.0/chapter3.tex
@@ -1,53 +1,67 @@
-\usepackage[cp1251]{inputenc}
 \chapter{Численные эксперименты}
-\section{Применение метода MPC к решению базовой задачи об экономическом росте}
+В данной главе применим решим практически задачу оптимального управления для неоклассической модели экономики c логарифмической функцией мгновенной полезности методом МРС как базовым способом (критерий типа Лагранжа), так и с добавлением терминальной стоимости (критерий типа Майера) и сравним их.
+\section{Применение метода MPC к решению задачи об экономическом росте}
 Рассмотрим задачу (2.14).
-\begin{center}
-	$ J(x,u) = \bigint_{0}^{\infty}e^{-\rho t}[\ln(1-u(t))+\ln f(x(t))]dt \rightarrow \max.$\\
-	$ \dot{x}(t) = u(t) f(x(t))-\mu x(t),u (t)\in U_\varepsilon = [0 ,1-\varepsilon], $\\
-	$ x(0) = x_0, x \ge 0$\\
-\end{center}
+    $$ J(x,u) = \int_{0}^{\infty}e^{-\rho t}[\ln(1-u(t))+\ln f(x(t))]dt \rightarrow \max.$$
+	$$ \dot{x}(t) = u(t) f(x(t))-\mu x(t),u (t)\in U_\varepsilon = [0 ,1-\varepsilon], $$
+	$$ x(0) = x_0, x \ge 0$$
 
 Цель данной главы применить методы решения ЗОУ для решения данной задачи.
 Для решения задачи воспользуемся алгоритмом, который был указан в пунтке 1.3. Рассматривать будем прогнозирующую задачу Лагранжа, т.е.
-\begin{center}
-	$ J(x,u) =  \bigint_{0}^{z} e^{-\rho t}[\ln(1-u(t))+\ln f(x(t))]dt $
-\end{center}
+$$ J(x,u) =  \int_{\tau}^{\tau+z} e^{-\rho t}[\ln(1-u(t))+\ln f(x(t))]dt $$
 Решение задачи будем искать численно в классе кусочно-постоянных функций, то есть
-\begin{center}
-	$ u(t) = u_i, t \in [ih, (i+1)h], i = 0,...,T-1 $
-\end{center}
-где $ h = z/T $ - период дискретизации, $ T \in \mathbb{N}$, $ T $ - горизонт планирования.\\
+$$ u(t) = u_i, t \in [ih, (i+1)h], i = 0,...,T-1 $$
+где $ h = z/T $ - период дискретизации, $ T \in \mathbb{N}$, $ T $ - дискретный горизонт планирования.\\
 Фазовая же переменная $ x $ и уравнение для её рассчета изменятся следующим образом:
-\begin{center}
-	$ x_{i+1} = u_i f(x_i)-\mu x_i$
-\end{center}
+$$ x_{i+1} = u_i f(x_i)-\mu x_i$$
 
 В таком случае критерий качества нашей задачи имеет следующий вид:
-\begin{center}
-	\begin{doublespace}
-		$ J(x,u) = \sum_{i=0}^{T-1}\bigint_{ih}^{(i+1)h} e^{-\rho t}[\ln(1-u_i)+\ln f(x_i)]dt =$ \\  $ \sum_{i=0}^{T-1}\dfrac{[\ln(1-u_i)+\ln f(x_i)]}{-\rho} \left(e^{-\rho(i+1)h} -  e^{-\rho ih}\right)$
-	\end{doublespace}
-\end{center}
+$$ J(x,u) = \sum_{i=0}^{T-1}\int_{ih}^{(i+1)h} e^{-\rho t}[\ln(1-u_i)+\ln f(x_i)]dt =$$  $$ \sum_{i=0}^{T-1}\dfrac{[\ln(1-u_i)+\ln f(x_i)]}{-\rho} \left(e^{-\rho(i+1)h} -  e^{-\rho ih}\right)$$
 В итоге мы получаем следующую дискретизированую задачу:
-\begin{center}
-	\begin{doublespace}
-		$ x_{i+1} = u_i f(x_i)-\mu x_i, u_i\in U_\varepsilon = [0 ,1-\varepsilon], x(0) = x_0, x_i \ge 0$\\
-		$ J(x,u) = \sum_{i=0}^{T-1}\dfrac{[\ln(1-u_i)+\ln f(x_i)]}{-\rho} \left(e^{-\rho(i+1)h} -  e^{-\rho ih}\right)$
-	\end{doublespace}
-\end{center}
+$$ x_{i+1} = u_i f(x_i)-\mu x_i, u_i\in U_\varepsilon = [0 ,1-\varepsilon], x(0) = x_0, x_i \ge 0$$
+$$ J(x,u) = \sum_{i=0}^{T-1}\dfrac{[\ln(1-u_i)+\ln f(x_i)]}{-\rho} \left(e^{-\rho(i+1)h} -  e^{-\rho ih}\right)$$
+Аналогичным образом рассмотрим задачу с критерием типа Майера. Для этого нам необходимо добавить к уже имеющейся задаче термильнальную стоимость.
+\begin{equation}
+J(x,u) = W(x(\tau+z)) + \int_{\tau}^{\tau+z}L(x(t),u(t))dt \rightarrow \max.
+\end{equation}
+$$ \dot{x}(t) = u(t) f(x(t))-\mu x(t),u (t)\in U_\varepsilon = [0 ,1-\varepsilon], $$
+$$ x_0 = x(0).$$
+Для того, чтобы выбрать подходящую терминальную стоимость W, запишем условия
+оптимальности (условия Каруша-Куна-Таккера) для задачи нелинейного программирования:
+\begin{equation}
+\partial L(x,u)/\partial x + (\partial f(x,u)/\partial x)^T p = 0,
+\end{equation}
+ $$\partial L(x,u)/\partial u + (\partial f(x,u)/\partial u)^T p = 0, f(x,u) = 0.$$
+Пара $ (\hat{x}, \hat{u}) $ необходимо удовлетворяет условиям вместе с некоторым (оптимальным) множителем Лагранжа $ \hat{p} $.
 
-Таким образом, задача оптимального управления в классе дискретных управляющих воздействий свелась к задаче нелинейного прогаммирования. Для ее численного решения существует ряд реализованных программно процедур, в частности, в рамках курсовой работы будет использвоаться стандартная процедура fminsearch пакета Matlab.
+Вернемся теперь к прогнозирующей задаче ОУ. Управление $ u(t) \equiv \hat{u} $, соответствующие ему прямая траектория $ x(t) \equiv \hat{x} $ и сопряженная траектория $ \psi(t) \equiv \hat{p} $, т.е. магистраль,
+является решением гамильтоновой системы принципа максимума
+\begin{equation}
+\dot{\psi} = -(\partial f(x(t),u(t))/\partial x)^T \psi(t) + \partial L(x(t),u(t))/\partial x,
+\end{equation} $$ \dot{x} = f(x(t),u(t)), t \in [\tau, \tau+z],$$
+при начальном условии $ x(t) = \hat{x} $, и условии трансверсальности $ \psi(z) = -\hat{p} $.
+Для того, чтобы в задаче 2.17 получить условие трансверсальности $ \psi(\tau+z) = -\hat{p} $ , выберем линейную терминальную стоимость $ W(x) = \hat{p}^Tx $. Тогда $ \psi(\tau+z) = -\partial W(x(\tau+z))/\partial x = -\hat{p} $
+
+Предположив, что терминальная стоимость содержит дисконтирующий множитель $ W(x,\tau+z) = e^{-\rho (\tau+z}\hat{p}x$ получим следующую прогнозирующую задачу:
+\begin{equation}
+J(x,u) = e^{-\rho \tau+z}\hat{p}x + \int_{0}^{\infty}e^{-\rho t}[\ln(1-u(t))+\ln f(x(t))]dt \rightarrow \max,
+\end{equation}
+$$ \dot{x}(t) = u(t) f(x(t))-\mu x(t),u (t)\in U_\varepsilon = [0 ,1-\varepsilon], $$
+$$ x(0) = x_0, x \ge 0$$
+Далее, используя аналогичные задаче без терминальной стоимости, вычисления, перейдем сразу к программируемой задаче:
+\begin{equation}
+J(x,u) = e^{-\rho \tau+z}\hat{p}_{T} + \sum_{i=0}^{T-1}\dfrac{[\ln(1-u_i)+\ln f(x_i)]}{-\rho} \left(e^{-\rho(i+1)h} -  e^{-\rho ih}\right),
+\end{equation}
+$$ \dot{x}(t) = u(t) f(x(t))-\mu x(t),u (t)\in U_\varepsilon = [0 ,1-\varepsilon], $$
+$$ x(0) = x_0, x \ge 0$$
+
+Таким образом, задача оптимального управления в классе дискретных управляющих воздействий свелась к задаче нелинейного прогаммирования. Для ее численного решения существует ряд реализованных программно процедур, в частности, в рамках курсовой работы будет использвоаться стандартная процедура fminsearch пакета Matlab. Нам теперь необходимо запрограммировать оба алгоритма и сравнить их.
 
 В качестве производственной функции мы рассматриваем:
-\begin{center}
-	$ f(x) = x^\alpha $
-\end{center}
-В задаче будем использовать следующие параметры: $ T = 10, \alpha = 0.3, \mu = 0.03, \rho = 0.05, \varepsilon = 0.01 $.\\ \\
+$$ f(x) = x^\alpha $$
+В задаче будем использовать следующие параметры: $ z = 10, \alpha = 0.3, \mu = 0.03, \rho = 0.05, \varepsilon = 0.01 $.\\ \\
 Решая уравнения для устойчивого состояния (магистраль) получим
-\begin{center}
-	$ x_* = 6.6076, u_* = 0.11250 $
-\end{center}
+$$ \hat{x} = 6.6076, \hat{u} = 0.11250, \hat{p} = 0.6395$$
 \section{Программное решение}
 Для рассчета состояния в следующий момент времени опредилим функции applycontrol на основе ode45 и deq, в качестве переменной для ode45:
 \begin{lstlisting}
@@ -104,45 +118,22 @@ end
 \begin{figure}[h]
 	\includegraphics[scale=0.5]{figure1.1}
 	\includegraphics[scale=0.4]{figure1.2}
-	\caption{Траектории $ x $ и $ u $ при $ T $ = 10}
+	\caption{Траектории $ x $ и $ u $ при $ z  = 10 $}
 \end{figure}
 \begin{figure}[h]
 	\includegraphics[scale=0.5]{figure2.1}
 	\includegraphics[scale=0.4]{figure2.2}
-	\caption{Траектории $ x $ и $ u $ при $ T $ = 30}
+	\caption{Траектории $ x $ и $ u $ при $ z $ = 30}
 \end{figure}
 \begin{figure}[h]
 	\includegraphics[scale=0.5]{figure3.1}
-	\includegraphics[scale=0.4]{figure2.2}
-	\caption{Траектории $ x $ и $ u $ при $ T $ = 50}
-\end{figure}
-\begin{figure}[h]
-	\includegraphics[scale=0.5]{figure4.1}
-	\includegraphics[scale=0.4]{figure2.2}
-	\caption{Траектории $ x $ и $ u $ при $ T $ = 70}
+	\includegraphics[scale=0.4]{figure3.2}
+	\caption{Траектории $ x $ и $ u $ при $ z $ = 50}
 \end{figure}
 
-Как мы видим, с увеличением горизонта планирования наша траектория приближается к устойчивому состоянию $ x_* $.\\
-Также следует отметить, что при увеличении горизонта нелинейно возрастает и время решения задачи. Здесь представлены траектории вплоть до $ T = 70 $. Учитывая динамику можно предположить, что при $ T \approx 90 $ траектория $ x $ совпадет с магистралью.
+Как мы видим, с увеличением горизонта планирования наша траектория приближается к устойчивому состоянию $ \hat{x} $.\\
+Также следует отметить, что при увеличении горизонта нелинейно возрастает и время решения задачи. Здесь представлены траектории вплоть до $ z = 50 $. Учитывая динамику можно предположить, что при $ z \approx 90 $ траектория $ x $ совпадет с магистралью.
 
 На рис. 3.1 --- 3.4 можно наблюдать эффект критерия Лагранжа: программные траектории (штриховые линии) покидают траекторию на
 заключительном участке, чтобы выполнить условие трансверсальности. Понятно, что на построение этих участков численная процедура решения задачи нелинейного программирования вынуждена тратить некоторое дополнительное время.
-\section{Применение метода MPC к решению задачи об экономическом росте с терминальной стоимостью}
-Теперь же, используя теоретические выкладки из п. 2.4, а так же рассчеты, приведенные в прошлой главе решим данную задачу добавив терминальную стоимость. По сути, теперь решаем задачу с критерием типа Майера, а не Лагранжа. Предположив, что терминальная стоимость содержит дисконтирующий множитель $ W(x,\tau + T) = e^{-\rho (\tau + T)}\lambda_*x$ получим следующую прогнозирующую задачу:
-\begin{equation}
-J(x,u) = e^{-\rho (\tau + T)}\lambda_*x + \bigint_{0}^{\infty}e^{-\rho t}[\ln(1-u(t))+\ln f(x(t))]dt \rightarrow \max,
-\end{equation}
-\begin{center}
-	$ \dot{x}(t) = u(t) f(x(t))-\mu x(t),u (t)\in U_\varepsilon = [0 ,1-\varepsilon], $\\
-	$ x(0) = x_0, x \ge 0$\\
-\end{center}
-Восплоьзовавшись вычислениями из п. 3.1 перейдем сразу к дискретизированной задаче, которую будем использовать при вычислении в Matlab:
-\begin{equation}
-J(x,u) = e^{-\rho (\tau + T)}\lambda_*x_{i+1} + \sum_{i=0}^{T-1}\dfrac{[\ln(1-u_i)+\ln f(x_i)]}{-\rho} \left(e^{-\rho(i+1)h} -  e^{-\rho ih}\right),
-\end{equation}
-\begin{center}
-	$ \dot{x}(t) = u(t) f(x(t))-\mu x(t),u (t)\in U_\varepsilon = [0 ,1-\varepsilon], $\\
-	$ x(0) = x_0, x \ge 0$\\
-\end{center}
-
-Уточним лишь, что для вычисления $ \lambda_* $ мы используем формулу $ \lambda_* = 1/(x_*^\alpha(1-u_*)) $, где $ (x_*,u_*) $ мы вычислили ранее в п 3.1.
+\section{Сравнение применения метода MPC к решению базовой задачи об экономическом росте и с терминальной стоимостью}
