--- a/Курсач2.0/chapter1.tex
+++ b/Курсач2.0/chapter1.tex
@@ -1,7 +1,7 @@
 \chapter{ОБЗОР ЛИТЕРАТУРЫ}\label{chap1}
 В данной главе собраны теоретические сведения об управлении по прогнозирующей моделии (далее $ - $ MPC), а так же о его модификации --- экономическом MPC. Рассматриваются различные подходы к построению аппроксимирующих задач.
 \section{Теория управления по прогнозирующей модели}\label{MPC}
-Управление по прогнозируемой модели (далее MPC, от англ. Model Predictive Control) --- это продвинутый метод управления процессами, который используется для соответствующего набора ограничений. Оно используется в перерабатывающей индустрии, на химических заводах и нефтепереработке с 80-х годов ХХ-го века. Сейчас данный метод так же используется при калибровке энергетических систем и силовой электронике. В МРС в основном используются динамические модели процессов, наиболее часто --- линейные эмпирические. Главным приимуществом MPC является то, что он способен оптимизировать текущий временной отрезок, учитывая будущие интервалы.
+Управление по прогнозирующей модели (далее MPC, от англ. Model Predictive Control) --- это продвинутый метод управления процессами, который используется для соответствующего набора ограничений. Оно используется в перерабатывающей индустрии, на химических заводах и нефтепереработке с 80-х годов ХХ-го века. Сейчас данный метод так же используется при калибровке энергетических систем и силовой электронике. В МРС в основном используются динамические модели процессов, наиболее часто --- линейные эмпирические. Главным приимуществом MPC является то, что он способен оптимизировать текущий временной отрезок, учитывая будущие интервалы.
 
 Модели, используемые в MPC, направлены на то, чтобы отражать поведение сложных динамических систем. Они предсказывают изменения в зависимых переменных моделируемых систем благодаря изменениям независимых переменных. Например если речь идет о химических процессах, независимые переменные, которые могут быть добавлены регулятором чаще всего являются либо установками ПИД-регуляторов, либо конечными контрольными элементами.
 
