--- a/Курсач2.0/chapter2.tex
+++ b/Курсач2.0/chapter2.tex
@@ -154,9 +154,9 @@ $$\text{Г}_3 = {(x,p)\in} \text{Г}: p > \dfrac{1}{\varepsilon f(x)} $$
 максимума нет. Все ее траектории имеют в этом множестве экспоненциально убывающую
 координату $ x $.
 Определим функцию $ y_1 : (0,\infty) \rightarrow \mathbb{R}^1  $ равенством
-$$ y_1(x)=\dfrac{1}{(\rho + \mu)f(x)} \dfrac{d}{dx}f(x) \forall x > 0 $$
+$$ y_1(x)=\dfrac{1}{(\rho + \mu)f(x)} \dfrac{d}{dx}f(x) \quad \forall x > 0 $$
 В силу неоклассических условий функция $ y_1 $ монотонно убывает,
-$$ y_1(x) \rightarrow \infty \quad \text{при} \quad x \rightarrow 0 \quad \text{и} \quad y_1(x) \rightarrow 0 \quad \text{при} \quad x \rightarrow \infty $$,
+$$ y_1(x) \rightarrow \infty \quad \text{при} \quad x \rightarrow 0 \quad \text{и} \quad y_1(x) \rightarrow 0 \quad \text{при} \quad x \rightarrow \infty, $$
 а равенство $ y_1(x)=1/f(x) $ выполняется в единственной точке $ \hat{x} $, являющейся корнем уравнения
 \begin{equation}
 \dfrac{d}{dx}f(x) = \rho + \mu
