--- a/Курсач2.0/chapter3.tex
+++ b/Курсач2.0/chapter3.tex
@@ -102,6 +102,7 @@ cost = cost + stagecost(t, x, u(i));
 x = applycontrol(t,x,u(i));
 t = t + dt;
 end
+cost = cost + termcost(t0, x);
 end
 function r = stagecost(t, k, c)
 r = (log(1 - c) + log(k^alpha))*...
@@ -114,7 +115,7 @@ end
 [k, c] = mpcsolve(Nmpc, k0, t0, 0.3*ones(N,1));
 \end{lstlisting}
 \section{–езультаты исследовани€}
-ѕускай мы указали в качестве начальных данных “ (горизонт планировани€) равным 10, рассматривать нашу задачу мы будем как минимум дл€ четырех различных горизонтов: 10, 30, 50 и 70. ¬ качестве начальных условий везде используетс€ $ x_0 = 1 $, период квантовани€ $ h = 1 $.
+ѕускай мы указали в качестве начальных данных “ (горизонт планировани€) равным 10, рассматривать нашу задачу мы будем как минимум дл€ четырех различных горизонтов: 10, 30, 50 и 70. ¬ качестве начальных условий везде используетс€ $ x_0 = 1 $, период квантовани€ $ h = 1 $. ƒобавление терминальной стоимости мы закомментируем.
 \begin{figure}[h]
 	\includegraphics[scale=0.5]{figure1.1}
 	\includegraphics[scale=0.4]{figure1.2}
@@ -136,4 +137,19 @@ end
 
 Ќа рис. 3.1 --- 3.4 можно наблюдать эффект критери€ Ћагранжа: программные траектории (штриховые линии) покидают траекторию на
 заключительном участке, чтобы выполнить условие трансверсальности. ѕон€тно, что на построение этих участков численна€ процедура решени€ задачи нелинейного программировани€ вынуждена тратить некоторое дополнительное врем€.
-\section{—равнение применени€ метода MPC к решению базовой задачи об экономическом росте и с терминальной стоимостью}
+
+“еперь же, использовав аналогичные данные, добавим терминальную стоимость. 
+ќчевидно, что при еЄ добавлении устойчивое состо€ние достигаетс€ гораздо быстрее и с гораздо меньшими трудозатратами. “.е. выгоднее и проще в данной ситуации будет использовать критерий типа ћайера, а не Ћагранжа, не смотр€ на то, что в некоторых ситуаци€х он, наоборот, будет более трудодзатратен.
+\\\\\\
+\begin{center}
+	\begin{figure}[h]
+		\includegraphics[scale=0.5]{figure4.1}
+		\includegraphics[scale=0.4]{figure4.2}
+		\caption{“раектории $ x $ и $ u $ при $ z $ = 10 и $ \tau = [0;20] $}
+	\end{figure}
+	\begin{figure}
+		\includegraphics[scale=0.5]{figure5.1}
+		\includegraphics[scale=0.4]{figure5.2}
+		\caption{“раектории $ x $ и $ u $ при $ z $ = 10 и $ t $ = 100 }
+	\end{figure}
+\end{center}
