--- a/Курсач2.0/chapter3.tex
+++ b/Курсач2.0/chapter3.tex
@@ -20,13 +20,13 @@ $$ J(x,u) = \sum_{i=0}^{T-1}\int_{ih}^{(i+1)h} e^{-\rho t}[\ln(1-u_i)+\ln f(x_i)
 В итоге мы получаем следующую дискретизированую задачу:
 $$ x_{i+1} = u_i f(x_i)-\mu x_i, u_i\in U_\varepsilon = [0 ,1-\varepsilon], x(0) = x_0, x_i \ge 0$$
 $$ J(x,u) = \sum_{i=0}^{T-1}\dfrac{[\ln(1-u_i)+\ln f(x_i)]}{-\rho} \left(e^{-\rho(i+1)h} -  e^{-\rho ih}\right)$$
-Аналогичным образом рассмотрим задачу с критерием типа Майера. Для этого нам необходимо добавить к уже имеющейся задаче термильнальную стоимость.
+Аналогичным образом рассмотрим задачу с критерием типа Майера. Для этого необходимо добавить к уже имеющейся задаче термильнальную стоимость.
 \begin{equation}
 J(x,u) = W(x(\tau+z)) + \int_{\tau}^{\tau+z}L(x(t),u(t))dt \rightarrow \max.
 \end{equation}
 $$ \dot{x}(t) = u(t) f(x(t))-\mu x(t),u (t)\in U_\varepsilon = [0 ,1-\varepsilon], $$
 $$ x_0 = x(0).$$
-Для того, чтобы выбрать подходящую терминальную стоимость W, запишем условия
+Для того, чтобы выбрать подходящую терминальную стоимость $ W $, запишем условия
 оптимальности (условия Каруша-Куна-Таккера) для задачи нелинейного программирования:
 \begin{equation}
 \partial L(x,u)/\partial x + (\partial f(x,u)/\partial x)^T p = 0,
@@ -57,7 +57,7 @@ $$ x(0) = x_0, x \ge 0$$
 
 Таким образом, задача оптимального управления в классе дискретных управляющих воздействий свелась к задаче нелинейного прогаммирования. Для ее численного решения существует ряд реализованных программно процедур, в частности, в рамках курсовой работы будет использвоаться стандартная процедура fminsearch пакета Matlab. Нам теперь необходимо запрограммировать оба алгоритма и сравнить их.
 
-В качестве производственной функции мы рассматриваем:
+В качестве производственной функции рассматриваем:
 $$ f(x) = x^\alpha $$
 В задаче будем использовать следующие параметры: $ z = 10, \alpha = 0.3, \mu = 0.03, \rho = 0.05, \varepsilon = 0.01 $.\\ \\
 Решая уравнения для устойчивого состояния (магистраль) получим
@@ -115,7 +115,7 @@ end
 [k, c] = mpcsolve(Nmpc, k0, t0, 0.3*ones(N,1));
 \end{lstlisting}
 \section{Результаты исследования}
-Пускай мы указали в качестве начальных данных Т (горизонт планирования) равным 10, рассматривать нашу задачу мы будем как минимум для четырех различных горизонтов: 10, 30, 50 и 70. В качестве начальных условий везде используется $ x_0 = 1 $, период квантования $ h = 1 $. Добавление терминальной стоимости мы закомментируем.
+В качестве начальных данных Т (горизонт планирования) положим равным 10, рассматривать нашу задачу будем как минимум для трех различных горизонтов: 10, 30, 50. В качестве начальных условий везде используется $ x_0 = 1 $, период квантования $ h = 1 $. Для начала, рассмотрим данную задачу без терминального слагаемого.
 \begin{figure}[h]
 	\includegraphics[scale=0.5]{figure1.1}
 	\includegraphics[scale=0.4]{figure1.2}
@@ -132,24 +132,23 @@ end
 	\caption{Траектории $ x $ и $ u $ при $ z $ = 50}
 \end{figure}
 
-Как мы видим, с увеличением горизонта планирования наша траектория приближается к устойчивому состоянию $ \hat{x} $.\\
-Также следует отметить, что при увеличении горизонта нелинейно возрастает и время решения задачи. Здесь представлены траектории вплоть до $ z = 50 $. Учитывая динамику можно предположить, что при $ z \approx 90 $ траектория $ x $ совпадет с магистралью.
+Очевидно, что с увеличением горизонта планирования наша траектория приближается к устойчивому состоянию $ \hat{x} $.\\
+Так же следует отметить, что при увеличении горизонта нелинейно возрастает и время решения задачи. Здесь представлены траектории вплоть до $ z = 50 $. Учитывая динамику можно предположить, что при $ z \approx 90 $ траектория $ x $ совпадет с магистралью.
 
-На рис. 3.1 --- 3.4 можно наблюдать эффект критерия Лагранжа: программные траектории (штриховые линии) покидают траекторию на
+На рис. 3.1 --- 3.3 можно наблюдать эффект критерия Лагранжа: программные траектории (штриховые линии) покидают траекторию на
 заключительном участке, чтобы выполнить условие трансверсальности. Понятно, что на построение этих участков численная процедура решения задачи нелинейного программирования вынуждена тратить некоторое дополнительное время.
 
 Теперь же, использовав аналогичные данные, добавим терминальную стоимость. 
-Очевидно, что при её добавлении устойчивое состояние достигается гораздо быстрее и с гораздо меньшими трудозатратами. Т.е. выгоднее и проще в данной ситуации будет использовать критерий типа Майера, а не Лагранжа, не смотря на то, что в некоторых ситуациях он, наоборот, будет более трудодзатратен.
-\\\\\\
-\begin{center}
-	\begin{figure}[h]
+Очевидно, что при её добавлении устойчивое состояние достигается гораздо быстрее и с гораздо меньшими трудозатратами. На рис. 3.4 изображены траектории при $ z = 10 $ и $ \tau = [0; 20] $. Видим, что $ x $ и $ u $ стремятся к магистрали на меньшем горизонте, что покажем, увеличив $ t $ до $ 100 $ (рис. 3.5). Аналогично будут выглядеть графики при меньшем $ z $.
+
+По полученным данным можно сделать вывод, что при использовании терминального слагаемого траекторию, выходящую на магистраль, можно получить при любом горизонте $ z $. Хотя при использовании терминального слагаемого время при прочих равных условиях работа программы несколько выше, при использовании терминального слагаемого можно значительно сократить время вычислений за счет выбора значительно меньшего горизонта планирования.
+\begin{figure}[h]
 		\includegraphics[scale=0.5]{figure4.1}
 		\includegraphics[scale=0.4]{figure4.2}
 		\caption{Траектории $ x $ и $ u $ при $ z $ = 10 и $ \tau = [0;20] $}
-	\end{figure}
-	\begin{figure}
+\end{figure}
+\begin{figure}[h]
 		\includegraphics[scale=0.5]{figure5.1}
 		\includegraphics[scale=0.4]{figure5.2}
 		\caption{Траектории $ x $ и $ u $ при $ z $ = 10 и $ t $ = 100 }
-	\end{figure}
-\end{center}
+\end{figure}
