добавлен пропущенный пример, незначительные правки в тексте

--- a/Курсач2.0/CourseWorkGoroshko.tex
+++ b/Курсач2.0/CourseWorkGoroshko.tex
@@ -6,7 +6,7 @@
 \usepackage{grffile}
 \usepackage{bigints}
 \graphicspath{}
-\DeclareGraphicsExtensions{.pdf,.png,.jpg}
+\DeclareGraphicsExtensions{.pdf,.png,.jpg,.eps}
 \usepackage[numbered,framed]{mcode}
 %\usepackage{refcheck}
 
