--- a/Курсач2.0/chapter2.tex
+++ b/Курсач2.0/chapter2.tex
@@ -170,5 +170,5 @@ $$ y_1(x) \rightarrow \infty \quad \text{при} \quad x \rightarrow 0 \quad \text{
 “очка $ (\hat{x}, \hat{p}) $ будет считатьс€ равновесной в данной системе и принадлежать множеству √$_2$, т.к. все траектории √$_1$ имеют экспоненциальную убывающую координату $ x $ (см. расчеты выше), а во множестве √$_3$ пр€ма€ $  V^0_{31} $ и крива€ $ V^0_{32} $ не пересекаютс€ (см. рис.).
 
 —оответственно, использу€ (2.16) дл€ рассчета $ \hat{x} $ и формулу  $$ \hat{p} = \dfrac{1}{f(\hat{x}) - \mu\hat{x}} $$ мы получаем нашу точку $ (\hat{x}, \hat{p}) $.
-„тобы получить управление $ \hat{u} $ предположим что $\dot{x}$ воспользуемс€ следующими услови€ми из [3] $ \dot{x} = 0, \dot{x}=\partial H/\partial p, x \equiv \hat{x}$, а так же гамильтонианом
-$$ H(x,u,p) = (uf(x)-\mu x)p +\ln(1-u) + \ln f(x) $$ мы получим, что $ \hat{u} = \mu \hat{x} /f(\hat{x})  $
+„тобы получить управление $ \hat{u} $ воспользуемс€ следующими услови€ми из [3] $ \dot{x} = 0, \dot{x}=\partial H/\partial p, x \equiv \hat{x}$, а так же гамильтонианом
+$$ H(x,u,p) = (uf(x)-\mu x)p +\ln(1-u) + \ln f(x). $$ —овершив все необходимые вычислени€ и преобразовани€ получим, что $ \hat{u} = \mu \hat{x} /f(\hat{x})  $
