--- a/Курсач2.0/chapter3.tex
+++ b/Курсач2.0/chapter3.tex
@@ -42,15 +42,15 @@ $$ x_0 = x(0).$$
 при начальном условии $ x(t) = \hat{x} $, и условии трансверсальности $ \psi(z) = -\hat{p} $.
 Для того, чтобы в задаче 2.17 получить условие трансверсальности $ \psi(\tau+z) = -\hat{p} $ , выберем линейную терминальную стоимость $ W(x) = \hat{p}^Tx $. Тогда $ \psi(\tau+z) = -\partial W(x(\tau+z))/\partial x = -\hat{p} $
 
-Предположив, что терминальная стоимость содержит дисконтирующий множитель $ W(x,\tau+z) = e^{-\rho (\tau+z}\hat{p}x$ получим следующую прогнозирующую задачу:
+Предположив, что терминальная стоимость содержит дисконтирующий множитель $ W(x,\tau+z) = e^{-\rho (\tau+z)}\hat{p}x$ получим следующую прогнозирующую задачу:
 \begin{equation}
-J(x,u) = e^{-\rho \tau+z}\hat{p}x + \int_{0}^{\infty}e^{-\rho t}[\ln(1-u(t))+\ln f(x(t))]dt \rightarrow \max,
+J(x,u) = e^{-\rho (\tau+z)}\hat{p}x + \int_{0}^{\infty}e^{-\rho t}[\ln(1-u(t))+\ln f(x(t))]dt \rightarrow \max,
 \end{equation}
 $$ \dot{x}(t) = u(t) f(x(t))-\mu x(t),u (t)\in U_\varepsilon = [0 ,1-\varepsilon], $$
 $$ x(0) = x_0, x \ge 0$$
 Далее, используя аналогичные задаче без терминальной стоимости, вычисления, перейдем сразу к программируемой задаче:
 \begin{equation}
-J(x,u) = e^{-\rho \tau+z}\hat{p}_{T} + \sum_{i=0}^{T-1}\dfrac{[\ln(1-u_i)+\ln f(x_i)]}{-\rho} \left(e^{-\rho(i+1)h} -  e^{-\rho ih}\right),
+J(x,u) = e^{-\rho (\tau+z)}\hat{p}_{T} + \sum_{i=0}^{T-1}\dfrac{[\ln(1-u_i)+\ln f(x_i)]}{-\rho} \left(e^{-\rho(i+1)h} -  e^{-\rho ih}\right),
 \end{equation}
 $$ \dot{x}(t) = u(t) f(x(t))-\mu x(t),u (t)\in U_\varepsilon = [0 ,1-\varepsilon], $$
 $$ x(0) = x_0, x \ge 0$$
@@ -135,8 +135,7 @@ end
 Очевидно, что с увеличением горизонта планирования наша траектория приближается к устойчивому состоянию $ \hat{x} $.\\
 Так же следует отметить, что при увеличении горизонта нелинейно возрастает и время решения задачи. Здесь представлены траектории вплоть до $ z = 50 $. Учитывая динамику можно предположить, что при $ z \approx 90 $ траектория $ x $ совпадет с магистралью.
 
-На рис. 3.1 --- 3.3 можно наблюдать эффект критерия Лагранжа: программные траектории (штриховые линии) покидают траекторию на
-заключительном участке, чтобы выполнить условие трансверсальности. Понятно, что на построение этих участков численная процедура решения задачи нелинейного программирования вынуждена тратить некоторое дополнительное время.
+На рис. 3.1 --- 3.3 можно наблюдать эффект критерия Лагранжа: программные траектории (штриховые линии) покидают траекторию на заключительном участке, чтобы выполнить условие трансверсальности. Понятно, что на построение этих участков численная процедура решения задачи нелинейного программирования вынуждена тратить некоторое дополнительное время.
 
 Теперь же, использовав аналогичные данные, добавим терминальную стоимость. 
 Очевидно, что при её добавлении устойчивое состояние достигается гораздо быстрее и с гораздо меньшими трудозатратами. На рис. 3.4 изображены траектории при $ z = 10 $ и $ \tau = [0; 20] $. Видим, что $ x $ и $ u $ стремятся к магистрали на меньшем горизонте, что покажем, увеличив $ t $ до $ 100 $ (рис. 3.5). Аналогично будут выглядеть графики при меньшем $ z $.
